--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angular-bootstrap-md": "^6.0.2",
     "angular2-highlight-js": "^5.0.0",
+    "bootstrap": "^4.1.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-cookie": "^1.0.0",
     "prismic-dom": "~1.2.6",
     "prismic-javascript": "~1.1.2",
